# si-ecs

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  main.cpp
benchmarks/: BenchCommon.hpp  entity_component_bench.cpp  migration_bench.cpp  migration_bench_15.cpp  migration_bench_32.cpp  migration_bench_32_hooks.cpp  query_bench.cpp
ecs/: Addons.cpp  Addons.hpp  Allocator.cpp  Allocator.hpp  BloomFilter.hpp  Commands.cpp  Commands.hpp  ComponentRegistry.hpp  ComponentType.hpp  EcsType.hpp  EcsVec.hpp  EntityManager.cpp  EntityManager.hpp  EntityRef.cpp  EntityRef.hpp  EntityRegistry.hpp  EntityType.cpp  Iter.cpp  Iter.hpp  Query.hpp  QueryTables.hpp  Reflect.hpp  Relations.hpp  SingletonRegistry.hpp  SparseSet.hpp  System.hpp  SystemDesc.hpp  SystemRegistry.cpp  SystemRegistry.hpp  Table.cpp  Table.hpp  TableMap.hpp  TableRegistry.cpp  TableRegistry.hpp  TypeCounter.hpp  TypedTable.hpp  World.cpp  World.hpp  pch.hpp
ecs/addon/: Addons.cpp
ecs/command/: Commands.cpp
ecs/core/: JitCompiler.cpp  JitCompiler.hpp
ecs/core/base/: EcsAssert.hpp  typing.hpp
ecs/core/component/: ComponentRegistry.cpp  ComponentRegistry.hpp
ecs/core/entity/: EntityManager.cpp  EntityManager.hpp  EntityRegistry.cpp  EntityType.cpp
ecs/core/event/: EntityEventRegistry.hpp  EventRegistry.hpp
ecs/core/memory/: Allocator.hpp
ecs/core/plugin/: PluginRegistry.hpp  SingletonRegistry.hpp
ecs/core/query/: BloomFilter.hpp  Query.cpp  QueryRegistry.cpp  QueryRegistry.hpp  QueryTables.hpp
ecs/core/relation/: Relations.hpp
ecs/core/storage/: EcsVec.hpp  SparseSet.hpp  Table.cpp  Table.hpp  TableMap.hpp  TableRegistry.cpp  TableRegistry.hpp  TypedTable.hpp
ecs/core/system/: SystemDesc.hpp  SystemRegistry.cpp  SystemRegistry.hpp  WorldAccess.hpp
ecs/world/: World.cpp
engine/: Engine.hpp
tests/: commands_basic.cpp  entity_manager_basic.cpp  query_basic.cpp  system_basic.cpp  system_condition.cpp  table_map_basic.cpp  world_batch_components_basic.cpp  world_components_basic.cpp  world_entities_basic.cpp  world_events_basic.cpp  world_relations_basic.cpp  world_shrink_basic.cpp  world_singletons_basic.cpp
tools/: vectorization_probe.cpp
